# SpreadStudy

./: README
AndroidStudy/app/: build.gradle.kts
KotlinStudy/: build.gradle.kts
Leetcode/LeetcodeCpp/: .clang-format  CMakeLists.txt  common.h  main.cpp  run.sh
Leetcode/LeetcodeCpp/Questions/: Solution.cpp  Solution.h
Leetcode/LeetcodeCpp/Util/: CommonUtil.cpp  CommonUtil.h  UnionFind.cpp  UnionFind.h
Leetcode/LeetcodeRust/: Cargo.toml
Leetcode/rust/: add_binary.rs  main.rs  make.bat
RustStudy/: Cargo.toml
RustStudy/src/: guessing_game.rs  main.rs  ownership.rs  references.rs  slice.rs  structt.rs  variables.rs
SpreadAndroidStudy/ActivityTest1/: settings.gradle.kts
SpreadAndroidStudy/ActivityTest2/: settings.gradle.kts
SpreadAndroidStudy/CardEmulatorStudy/: settings.gradle.kts
SpreadAndroidStudy/CustomViewTest/: README.md
SpreadAndroidStudy/DatabaseTest/: gradle.properties
SpreadAndroidStudy/EasyPhone/: settings.gradle.kts
SpreadAndroidStudy/FrameMonitor/: local.properties
SpreadAndroidStudy/FrescoDisplayDemo/: settings.gradle.kts
SpreadAndroidStudy/Gcglfz/: settings.gradle.kts
SpreadAndroidStudy/Marqueue/: settings.gradle
SpreadAndroidStudy/MyHandler/: settings.gradle.kts
SpreadAndroidStudy/NFCStudy/: settings.gradle.kts
SpreadAndroidStudy/NativeStudy/: settings.gradle.kts
SpreadAndroidStudy/OSTEPStudy/: settings.gradle.kts
SpreadAndroidStudy/OttOTTS/: settings.gradle.kts
SpreadAndroidStudy/PicPhone/: settings.gradle.kts
SpreadAndroidStudy/RTCStudy/: settings.gradle.kts
leo/: .gitignore  go.mod  go.sum  main.go
(+916 files in other folders)
